--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Excuse Generator</title>
+    <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
@@ -13,6 +14,9 @@
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
   <body>
-    <p id="excuse">My dog ate my homework</p>
+    <div class="text-center">
+      <h1>OMG! You will not believe me but...</h1>
+      <h2 id="excuse"></h2>
+    </div>
   </body>
 </html>
